--- a/Cargo.toml
+++ b/Cargo.toml
@@ -111,7 +111,11 @@ mime = "0.3.13"
 farmhash = "1.1.5"
 failure = "0.1"
 tipb = { git = "https://github.com/pingcap/tipb.git" }
-kvproto = { git = "https://github.com/pingcap/kvproto.git" }
+kvproto = { git = "https://github.com/qiuyesuifeng/kvproto.git", branch = "tiboys/tbssql2.0" }
+nom = "5.0.1" 
+walkdir = "2"
+rev_lines = "0.2.1"
+rsperftools = { git = "https://github.com/lonng/rsperftools", branch = "pprof"}
 
 tikv_alloc = { path = "components/tikv_alloc", default-features = false }
 tikv_util = { path = "components/tikv_util" }
