--- a/components/pd_client/Cargo.toml
+++ b/components/pd_client/Cargo.toml
@@ -22,7 +22,7 @@ serde_json = "1.0"
 serde_derive = "1.0"
 grpcio = { version = "0.5.0-alpha.3", features = [ "secure" ] }
 tikv_util = { path = "../tikv_util" }
-kvproto = { git = "https://github.com/pingcap/kvproto.git" }
+kvproto = { git = "https://github.com/qiuyesuifeng/kvproto.git", branch = "tiboys/tbssql2.0" }
 hex = "0.3"
 
 [dependencies.prometheus]
